--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,12 @@ spring.jpa.hibernate.ddl-auto=update
 #jwt.security.secret-key=""
 
 #S3
-cloud.aws.credentials.access-key =**********************
-cloud.aws.credentials.secret-key =*******************************
-cloud.aws.region.static =**********
+cloud.aws.credentials.access-key =***************************
+cloud.aws.credentials.secret-key =**********************************
+cloud.aws.region.static =*********************
 # Maximum file size for individual files (default is 1MB)
 spring.servlet.multipart.max-file-size=100MB
 
 # Maximum request size for multipart/form-data (default is 10MB)
 spring.servlet.multipart.max-request-size=100MB
-aws.bucket.name=*******
+aws.bucket.name=********************
