--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,10 @@
             <artifactId>s3</artifactId>
             <version>2.25.14</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
